# claws_mail_opensync_plugin

./: .cvsignore  .gitignore  AUTHORS  COPYING  HACKING  INSTALL  Makefile.am  README  autogen.sh  commitHelper  configure.ac  libtool
config/: .cvsignore
m4/: Makefile.am
po/: .cvsignore  Makevars
src/: Makefile.am  gettext.h  opensync.c  opensync.deps  opensync.h  opensync_plugin.c  opensync_prefs.c  opensync_prefs.h  vformat.c  vformat.h
test/: Makefile.am  sock_test.c
